youfull/objects/ALM_Rep_Performance_1__c.object
<CustomObject>
    <fields>
        <fullName>GRP_INVC_AWRD_SLS_AMT__c</fullName>
        <inlineHelpText>invoiced Award Sales not deducting returns</inlineHelpText>
        <label>Award Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_PCT__c</fullName>
        <formula>IF (OR (GRP_UNIT_SLS_AMT__c = 0, GRP_UNIT_SLS_AMT__c = null), 0, (GRP_IN_ZONE_QV__c/GRP_UNIT_SLS_AMT__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Group Sales In Zone</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_QV__c</fullName>
        <label>In Zone Group Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Team In zone Returns Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_LLOA_1_6_REP_CNT__c</fullName>
        <label>Team LLOA 1 to 6</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_LOA_0_REP_CNT__c</fullName>
        <label>Team LOA 0</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_1_CNT__c</fullName>
        <label>Group Market Tag 1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_2_AMT__c</fullName>
        <label>Group Market tag 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_3_TXTTRNS__c</fullName>
        <description>Grp Market Tag translation for boolean fields</description>
        <formula>CASE(GRP_MRKT_TAG_3_TXT__c,
 &apos;Y&apos;, $Label.GRP_MRKT_TAG_3_TXTTRNSTRUE_LBL , 
 &apos;N&apos;, $Label.GRP_MRKT_TAG_3_TXTTRNSFALSE_LBL ,
 GRP_MRKT_TAG_3_TXT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grp Market Tag translation for boolean fields</inlineHelpText>
        <label>Market Tag 3 - Boolean Translation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_3_TXT__c</fullName>
        <label>Group Market Tag 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_NET_SLS_AMT__c</fullName>
        <label>Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_NO_ORD_CNT__c</fullName>
        <label>No Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ORD_HOLD_AMT__c</fullName>
        <label>Order on Hold Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PAST_DUE_AMT__c</fullName>
        <label>Past Due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PAST_DUE_REP_CNT__c</fullName>
        <description>Number of Downlines with Past Due Amount &gt; 0. Will be compared to the Max Past Due Rep Count from Leader Title to see if Leader has achieved Title.</description>
        <label>Past Due Rep Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PENDNG_ORD_AMT__c</fullName>
        <label>Saved Orders Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_QPA_CNT__c</fullName>
        <label>Qualifying Personal Appointments (QPA)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_QPA_RATE_PCT__c</fullName>
        <formula>100*(GRP_QPA_CNT__c / GRP_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%QPA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_REP_CNT__c</fullName>
        <label>G1-3 Representatives</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RISNG_STAR_CNT__c</fullName>
        <label>Team Rising Star</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RMOVL_CNT__c</fullName>
        <label>Removals</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RNSTMT_CNT__c</fullName>
        <label>Reinstatements</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RTURN_NET_SLS_AMT__c</fullName>
        <label>Return Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RTURN_REP_CNT__c</fullName>
        <label>Team Returns Count (NOT USED)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_BLCKD_SLS_AMT__c</fullName>
        <label>Total Submitted Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_REP_CNT__c</fullName>
        <label>Count of Representatives with Submitted</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_SLS_AMT__c</fullName>
        <formula>GRP_SUBMTD_AWRD_SLS_AMT__c +  GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total  Submitted Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TAR_CNT__c</fullName>
        <label>Team Title At Risk</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_1_STF_CNT__c</fullName>
        <inlineHelpText>Count of Unit leaders</inlineHelpText>
        <label>Team Candidates</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_DMTD_CNT__c</fullName>
        <label>Team Title Demoted</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_PROMTD_CNT__c</fullName>
        <label>Team Title Promoted</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_ABV_QLFR_CNT__c</fullName>
        <label>Team Sales Above title Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_ABV_QLFR_IND__c</fullName>
        <label>Team Unit Sales Above Group Qualifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_BLW_QLFR_CNT__c</fullName>
        <label>Team Sales Below title Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_BLW_QLFR_IND__c</fullName>
        <label>Team Unit Sales Under Group Qualifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_UND_MOV_REP_CNT__c</fullName>
        <label>Team Reps Under Minimum Order Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_UNIT_SLS_AMT__c</fullName>
        <formula>GRP_INVC_AWRD_SLS_AMT__c +  GRP_SUBMTD_AWRD_SLS_AMT__c + GRP_INVC_RTURN_AWRD_SLS_AMT__c + GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Invc + Submitted deducting returns</inlineHelpText>
        <label>Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_WO_FAP_REP_CNT__c</fullName>
        <label>Team Without FAP Activity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_WO_PATD_REP_CNT__c</fullName>
        <label>Team Non PATD</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_1_Total_Titled_Leader_Candidates__c</fullName>
        <formula>GENRTN_1_TITL_STF_CNT__c + GENRTN_1_TITL_0_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes Candidates plus UL&apos;s</inlineHelpText>
        <label>Gen 1 Total Titled Leader &amp; Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genealogy_Key__c</fullName>
        <externalId>true</externalId>
        <label>Genealogy Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Genealogy_Level__c</fullName>
        <label>Genealogy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_3_CMPGN_CNT__c</fullName>
        <label>Inactive 1 to 3 Camp Reps Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_PLUS_REP_CNT__c</fullName>
        <label>Inactive Camp +1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_CMPGN_CNT__c</fullName>
        <label># of Campaigns Inactive</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVCD_SLS_AMT__c</fullName>
        <formula>INVC_AWRD_SLS_AMT__c  +  INVC_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoiced Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_AWRD_SLS_AMT__c</fullName>
        <label>Invoiced Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_CURR_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.CMPGN_NR__c =  TEXT( FLD_SLS_CMPGN_NR__c ) , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_NEXT_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.NEXT_1_CMPGN_NR__c = TEXT( FLD_SLS_CMPGN_NR__c ), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.PREV_1_CMPGN_NR__c = TEXT( FLD_SLS_CMPGN_NR__c ), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Prev Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_OR_CURR_OR_NEXT_CMPGN__c</fullName>
        <formula>IF ( OR (
(MRKT_KEY__r.PREV_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
(MRKT_KEY__r.CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
(MRKT_KEY__r.NEXT_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c) ), 
&apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Previous or Current or Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_QUALFD_IMAGE__c</fullName>
        <formula>IF(IS_QUALFD_IND__c, IMAGE(&quot;/img/samples/light_green.gif&quot;, $Label.ZM_Formula_Green), 
    IF((FRST_ORDER_DUE_DT__c &gt;  TODAY()), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, $Label.ZM_Formula_Yellow),    
        IMAGE(&quot;/img/samples/light_red.gif&quot;, $Label.ZM_Formula_Red) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPA Achievement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_QUALFD_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for the representative whose title is Candidate and they are certified (qualified). Y/N</inlineHelpText>
        <label>Qualified Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_RECENT_RMOVL__c</fullName>
        <formula>IF ( AND (REP_OMS_STUS_CD__c = &apos;0&apos;, OR (REP_RMOVL_CMPGN_NR__c = MRKT_KEY__r.CMPGN_NR__c, REP_RMOVL_CMPGN_NR__c = MRKT_KEY__r.PREV_1_CMPGN_NR__c ) ), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Removed in current or Prior Campaign</inlineHelpText>
        <label>Is Recent Removal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CMPGN_BASE_TAR_IND__c</fullName>
        <description>Indicating user is base at risk!</description>
        <inlineHelpText>Indicating user is base at risk!</inlineHelpText>
        <label>Last Campaign Base Target Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CMPGN_TAR_IND__c</fullName>
        <inlineHelpText>At Risk!</inlineHelpText>
        <label>Title At Risk Last Campaign</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_KEY__c</fullName>
        <label>Seller Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_TOP_SLR_LVL_LANG_DESC_TXT__c</fullName>
        <label>Seller Title A</label>
        <picklist>
            <picklistValues>
                <fullName>0-PCSilver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-PCSilverO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-ModelsO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-HighFlyers1O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-HighFlyers2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers1NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Movers1O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Movers2NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Movers2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Movers3NQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Movers3O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFDNQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-CustomerFDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON TOP SELLER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_BASE_TAR_IND__c</fullName>
        <description>Indicate user is base at risk</description>
        <inlineHelpText>Indicate user is base at risk</inlineHelpText>
        <label>Leadership Base Target Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_CTT_IND__c</fullName>
        <label>Leader Title Close to Promoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_LOA_NR__c</fullName>
        <label>Leadership LOA</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RPT_SLS_ZONE_CD__c</fullName>
        <label>Reporting Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TAR_IND__c</fullName>
        <label>Leader Title at Risk</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_DMTD_IND__c</fullName>
        <label>Leader Title Demoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_CD__c</fullName>
        <label>Badge Title Code</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_DESC__c</fullName>
        <label>Badge Title</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Unit Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Unit Leader 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NAME__c</fullName>
        <label>Leader Title</label>
        <picklist>
            <picklistValues>
                <fullName>Non Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Leader Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Unit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Leader - Gold Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Leader - Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Leader - Silver Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Executive Leader - Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Level 14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR_NUMBER__c</fullName>
        <description>LDRSHP_TITL_LVL_NR__c converted into a number</description>
        <formula>VALUE( LDRSHP_TITL_LVL_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LDRSHP_TITL_LVL_NR__c converted into a number</inlineHelpText>
        <label>Level Title Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Badge Title (Achieved Title)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_PROMTD_IND__c</fullName>
        <label>Leader Title Promoted</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDR_ERNGS_AMT__c</fullName>
        <label>Leadership Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDR_TITL__c</fullName>
        <formula>IF (MRKT_KEY__r.CMPGN_END_DT__c &gt;  TODAY() ,  TEXT(LDRSHP_TITL_LVL_NAME__c) , TEXT( PD_TITL_LVL_NAME__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leader Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDR_TYP__c</fullName>
        <label>LDR_TYP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LFT_ND_ID__c</fullName>
        <label>Sort</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales LOA1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_BRCHR_CNT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LOA 1-6 Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_CUST_CNT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LOA 1-6 Customer Served Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_GRP_UNIT_SLS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unit Sales LOA1-6</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_STF_CNT__c</fullName>
        <label>LOA 1-6 Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_NR_2__c</fullName>
        <formula>LOA_NR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_NR__c</fullName>
        <label>LOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LST_ACTV_CMPGN__c</fullName>
        <label>Last Active Campaign</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LST_ORD_CMPGN_NR__c</fullName>
        <label>Last Order Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CD__c</fullName>
        <label>Mail Plan</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CLOSD_IND_TR__c</fullName>
        <formula>MailPlan_Order_Oppty__r.MLPLN_CLOSD_IND_TRN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Translated values of the MailPlan Open Indicator</inlineHelpText>
        <label>MLPLN CLOSD IND TR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPLN_CLS_IND__c</fullName>
        <label>Mail Plan Close Indicator (DO NOT USE)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ACCT_KEY__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ALM Rep Performance</relationshipLabel>
        <relationshipName>ALM_Rep_Performance_1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MRKT_CMPGN_ROOT_UPLN_ACCT__c</fullName>
        <label>Market/Campaign Upline Account(Cluster)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_CMPGN_SLS_ZONE_CD__c</fullName>
        <label>Market Campaign / Zone (Cluster)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>Market Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_INVC_GRP_SLS_AMT__c</fullName>
        <formula>If (!MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c, GRP_INVC_AWRD_SLS_AMT__c, IF(IS_PREV_1_CMPGN__c==&quot;True&quot; &amp;&amp; MRKT_KEY__r.CDW_DEDUCTED_RETURNS__c, GRP_INVC_AWRD_SLS_AMT__c, GRP_INVCD_SLS_AMT__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unit Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_INVC_SLS_AMT__c</fullName>
        <formula>If (!MRKT_KEY__r.DEDUCT_RETURNS_ON_SALES__c, INVC_AWRD_SLS_AMT__c, IF(IS_PREV_1_CMPGN__c==&quot;True&quot; &amp;&amp; MRKT_KEY__r.CDW_DEDUCTED_RETURNS__c, INVC_AWRD_SLS_AMT__c, INVCD_SLS_AMT__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>